--- a/static/style.css
+++ b/static/style.css
@@ -77,10 +77,34 @@ nav img{
     display: inline-block;
     text-decoration: none;
     color: #fff;
-    border: 2px solid #ff0303;
+    border: 2px solid white;
     padding: 12px 34px;
     font-size: 13px;
     background: transparent;
     position: relative;
     cursor: pointer;
+}
+.hero-btn:hover{
+    border: 1px solid #ff0303;
+    background-color: #ff0303;
+    transition: 1s;
+}
+
+@media(max-width: 700px){
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #ff0303;
+        height: 100vh;
+        width: 200px;
+        top:0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
 }
