--- a/templates/index.html
+++ b/templates/index.html
@@ -160,8 +160,23 @@
 
 
     <section class="cta">
-        <h1>Enroll for Our Various Online Courses Anywhere from The World</h1>
-        <a href="">CONTACT US</a>
+        <h1>Enroll for Our Various Online Courses <br>Anywhere from The World</h1>
+        <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+
+
+
+    <section class="footer">
+        <h4>ABOUT <span>US</span></h4>
+        <p>These Institutes provided facility of libraries and scientific instruments. They also offered salaries to tutors who prepared students to appear for examination and acquire a degree.</p>
+        <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-pinterest"></i> 
+        </div>
+        <p>Made with by <i class="fa fa-heart"></i> Nithish <i class="fa fa-heart"></i></p>
     </section>
 
     <script>
