--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="{% url 'about' %}">ABOUT</a></li>
                     <li><a href="">COURSES</a></li>
                     <li><a href="">BLOG</a></li>
                     <li><a href="">CONTACT</a></li>
@@ -161,13 +161,13 @@
 
     <section class="cta">
         <h1>Enroll for Our Various Online Courses <br>Anywhere from The World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="" class="hero-btn">Contact Us</a>
     </section>
 
 
 
     <section class="footer">
-        <h4>ABOUT <span>US</span></h4>
+        <h4>About <span>Us</span></h4>
         <p>These Institutes provided facility of libraries and scientific instruments. They also offered salaries to tutors who prepared students to appear for examination and acquire a degree.</p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
