--- a/static/style.css
+++ b/static/style.css
@@ -299,6 +299,7 @@ h3{
     margin: 100% auto;
     width: 80%;
     background-image: url('banner2.jpg');
+    background-color: rgba(82, 75, 75, 0.7);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -337,4 +338,28 @@ h3{
 
 .fa-heart-o{
     color: #f44336;
+}
+
+
+
+
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: url('background.jpg');
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1{
+    margin-top: 100%;
+}
+
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
 }
