--- a/templates/about.html
+++ b/templates/about.html
@@ -33,18 +33,18 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>        
+        <h1>About <span>Us</span></h1>        
     </section>
 
     <section class="about-us">
         <div class="row">
             <div class="about-col">
                 <h1>We are The World's Largest University</h1>
-                <p>..........</p>
+                <p>An institution is a humanly devised structure of rules and norms that shape and constrain social behavior. All definitions of institutions generally entail that there is a level of persistence and continuity. Laws, rules, social conventions and norms are all examples of institutions.Institutions vary in their level of formality and informality.</p>
                 <a href="">Explore Now</a>
             </div>
             <div class="about-col">
-                <img src="{% static 'about.jpg' %}" alt="">
+                <img src="{% static 'about1.jpg' %}" alt="">
             </div>
         </div>
     </section>
